# cargo-container

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  Readme.md
.cargo/: config
.github/workflows/: rust.yml  windows.yml
docs/: Commands.md
example/multiplatform/: Container.toml  Readme.md
example/multiplatform/.cargo/: config
example/multiplatform/app-common/: Cargo.toml  app-common.rs
example/multiplatform/apps/alpha/: Cargo.toml  alpha.rs
example/multiplatform/apps/beta/: Cargo.toml  beta.rs
example/multiplatform/apps/delta/: Cargo.toml  delta.rs
examples/01-commandline/: Cargo.toml
examples/02-wasmpack/: Cargo.toml
examples/02-wasmpack/src/: lib.rs
examples/03-cargoweb/: Cargo.toml
examples/03-cargoweb/src/: main.rs
examples/04-cargosubcommand/: Cargo.toml
src/: _main.rs  args.rs  container_toml.rs  env_utils.rs  generate.rs  run.rs  toml_util.rs
