# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "02-wasmpack"
publish = false
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"

[package.metadata.container]
configs = ["debug", "release"]
platforms = ["browser-wasm-pack"]
