# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "03-cargoweb"
publish = false
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4"

[package.metadata.container]
configs = ["debug", "release"]
platforms = ["browser-cargo-web"]
